Add examples to bibset description

--- a/inst/extdata/bibset-raw/icus02.bib
+++ b/inst/extdata/bibset-raw/icus02.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS02,
+@Proceedings{ICUS02,
 title={Modern Science and Moral Values},
 titleaddon={Second International Conference on the Unity of the Sciences},
 shorttitle={ICUS II},
@@ -12,19 +12,19 @@ urldate={2023-05-08},
 keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS02:P01,
+@InProceedings{ICUS02:P01,
 crossref={ICUS02},
 title={Opening Address},
 author={Sawada, Nobusige}
 }
 
-@inproceedings{ICUS02:P02,
+@InProceedings{ICUS02:P02,
 crossref={ICUS02},
 title={Culture: The Creation of Man and the Creator of Man},
 author={Eccles, John Carew}
 }
 
-@set{ICUS02:C01,
+@Set{ICUS02:C01,
 entryset={ICUS02:C01:G01:S01},
   pattern = {ICUS02:C01:G\d\d},
   patterntype = {key},
@@ -32,7 +32,7 @@ settype={Track},
 title={Science and Philosophy}
 }
 
-@set{ICUS02:C01:G01,
+@Set{ICUS02:C01:G01,
   entryset = {ICUS02:C01:G01:S01},
   pattern = {ICUS02:C01:G01:[S|X]},
   patterntype = {key},
@@ -41,19 +41,19 @@ title={Science and Philosophy}
   chairperson = {Hintikka, J. and Yosida, N.},
 }
 
-@inproceedings{ICUS02:C01:G01:S01,
+@InProceedings{ICUS02:C01:G01:S01,
 crossref={ICUS02},
 title={Unity of Science - 1973},
 author={Bar-Hillel, Yehoshua}
 }
 
-@inproceedings{ICUS02:C01:G01:S02,
+@InProceedings{ICUS02:C01:G01:S02,
 crossref={ICUS02},
 title={On Understanding - The Generality of Language},
 author={Sakai, Hidehisa}
 }
 
-@inproceedings{ICUS02:C01:G01:S03,
+@InProceedings{ICUS02:C01:G01:S03,
 crossref={ICUS02},
 title={A Scientist's Contribution to Values, Morals and Ethics},
 author={Cassidy, Harold Gomes}
@@ -61,7 +61,7 @@ author={Cassidy, Harold Gomes}
 
 
 
-@set{ICUS02:C01:G02,
+@Set{ICUS02:C01:G02,
   entryset = {ICUS02:C01:G02:S01},
   pattern = {ICUS02:C01:G02:[S|X]},
   patterntype = {key},
@@ -70,20 +70,20 @@ author={Cassidy, Harold Gomes}
   chairperson = {Laszlo, Ervin and Kihara, H.},
 }
 
-@inproceedings{ICUS02:C01:G02:S01,
+@InProceedings{ICUS02:C01:G02:S01,
 crossref={ICUS02},
 title={The Dilemma of Science and Morals},
 author={Stent, Gunther Siegmund}
 }
 
-@inproceedings{ICUS02:C01:G02:S02,
+@InProceedings{ICUS02:C01:G02:S02,
 crossref={ICUS02},
 title={Modern Science and Moral Values},
 subtitle={Some Lessons of the History of Science},
 author={Jaki, Stanley L.}
 }
 
-@inproceedings{ICUS02:C01:G02:S03,
+@InProceedings{ICUS02:C01:G02:S03,
 crossref={ICUS02},
 title={The Meaning of Science in Oriental Mind},
 author={Yoon, Se Won}
@@ -91,7 +91,7 @@ author={Yoon, Se Won}
 
 
 
-@set{ICUS02:C01:G03,
+@Set{ICUS02:C01:G03,
   entryset = {ICUS02:C01:G03:S01},
   pattern = {ICUS02:C01:G03:[S|X]},
   patterntype = {key},
@@ -100,20 +100,20 @@ author={Yoon, Se Won}
   chairperson = {Süssmann, G. and Yamamoto, M.},
 }
 
-@inproceedings{ICUS02:C01:G03:S01,
+@InProceedings{ICUS02:C01:G03:S01,
 crossref={ICUS02},
 title={The Role of General Systems Theory in the Conceptual
 Synthesis of the Coming Age},
 author={Laszlo, Ervin}
 }
 
-@inproceedings{ICUS02:C01:G03:S02,
+@InProceedings{ICUS02:C01:G03:S02,
 crossref={ICUS02},
 title={Modern Science and Moral Values - A Systems View},
 author={Buckley, William F.}
 }
 
-@inproceedings{ICUS02:C01:G03:S013,
+@InProceedings{ICUS02:C01:G03:S013,
 crossref={ICUS02},
 title={Violence and Technological Society},
 author={Taylor, Gordon Ramsay Rattray}
@@ -121,7 +121,7 @@ author={Taylor, Gordon Ramsay Rattray}
 
 
 
-@set{ICUS02:C01:G04,
+@Set{ICUS02:C01:G04,
   entryset = {ICUS02:C01:G04:S01},
   pattern = {ICUS02:C01:G04:[S|X]},
   patterntype = {key},
@@ -130,19 +130,19 @@ author={Taylor, Gordon Ramsay Rattray}
   chairperson = {Ahn, B. U. and Inoue, T.},
 }
 
-@inproceedings{ICUS02:C01:G04:S01,
+@InProceedings{ICUS02:C01:G04:S01,
 crossref={ICUS02},
 title={Man and City in Plato's Republic},
 author={White, Nicholas P.}
 }
 
-@inproceedings{ICUS02:C01:G04:S02,
+@InProceedings{ICUS02:C01:G04:S02,
 crossref={ICUS02},
 title={The European Experience of Nature},
 author={Crombie, Alistair Cameron}
 }
 
-@inproceedings{ICUS02:C01:G04:S03,
+@InProceedings{ICUS02:C01:G04:S03,
 crossref={ICUS02},
 title={Gnosis as Basis of Unity},
 author={Quispel, Gilles}
@@ -150,7 +150,7 @@ author={Quispel, Gilles}
 
 
 
-@set{ICUS02:C01:G05,
+@Set{ICUS02:C01:G05,
   entryset = {ICUS02:C01:G05:S01},
   pattern = {ICUS02:C01:G05:[S|X]},
   patterntype = {key},
@@ -159,19 +159,19 @@ author={Quispel, Gilles}
   chairperson = {Yoon, S. W. and Murakami, Y.},
 }
 
-@inproceedings{ICUS02:C01:G05:S01,
+@InProceedings{ICUS02:C01:G05:S01,
 crossref={ICUS02},
 title={The Capture of the Sun},
 author={Mbiti, John S.}
 }
 
-@inproceedings{ICUS02:C01:G05:S02,
+@InProceedings{ICUS02:C01:G05:S02,
 crossref={ICUS02},
 title={Man Versus Nature: Contemporary Moral Dilemma},
 author={Husain, Mahmud}
 }
 
-@inproceedings{ICUS02:C01:G05:S03,
+@InProceedings{ICUS02:C01:G05:S03,
 crossref={ICUS02},
 title={The Meaning of Scientific Objectivity},
 author={Gerholm, Tor Ragnar}
@@ -179,7 +179,7 @@ author={Gerholm, Tor Ragnar}
 
 
 
-@set{ICUS02:C01:G06,
+@Set{ICUS02:C01:G06,
   entryset = {ICUS02:C01:G06:S01},
   pattern = {ICUS02:C01:G06:[S|X]},
   patterntype = {key},
@@ -188,20 +188,20 @@ author={Gerholm, Tor Ragnar}
   chairperson = {Husain, M. and Sakamoto, H.},
 }
 
-@inproceedings{ICUS02:C01:G06:S01,
+@InProceedings{ICUS02:C01:G06:S01,
 crossref={ICUS02},
 title={Knowing, Making and Human Values},
 author={Hintikka, Kaarlo Jaakko Juhani}
 }
 
-@inproceedings{ICUS02:C01:G06:S02,
+@InProceedings{ICUS02:C01:G06:S02,
 crossref={ICUS02},
 title={Obligation and Experience - The ''Is-Ought'' Problem
 Reconsidered},
 author={Fujimoto, Takashi}
 }
 
-@inproceedings{ICUS02:C01:G06:S03,
+@InProceedings{ICUS02:C01:G06:S03,
 crossref={ICUS02},
 title={Unity is Consistency, Coherence and Solidarity of Parts},
 author={S{\"u}ssmann, Georg}
@@ -209,7 +209,7 @@ author={S{\"u}ssmann, Georg}
 
 
 
-@set{ICUS02:C02,
+@Set{ICUS02:C02,
 entryset={ICUS02:C02:G01:S01},
   pattern = {ICUS02:C02:G\d\d},
   patterntype = {key},
@@ -218,7 +218,7 @@ title={Science, Technology and Society - Socio-Cultural Implications
 of R \& D in Science-Technology}
 }
 
-@set{ICUS02:C02:G01,
+@Set{ICUS02:C02:G01,
   entryset = {ICUS02:C02:G01:S01},
   pattern = {ICUS02:C02:G01:[S|X]},
   patterntype = {key},
@@ -227,19 +227,19 @@ of R \& D in Science-Technology}
   chairperson = {Long, F. A. and Kumon, S.},
 }
 
-@inproceedings{ICUS02:C02:G01:S01,
+@InProceedings{ICUS02:C02:G01:S01,
 crossref={ICUS02},
 title={Scientific Aid to Value Judgement},
 author={Dror, Yehezkel}
 }
 
-@inproceedings{ICUS02:C02:G01:S02,
+@InProceedings{ICUS02:C02:G01:S02,
 crossref={ICUS02},
 title={Technical Progresses and Medical Ethic},
 author={Guilmet, Daniel}
 }
 
-@inproceedings{ICUS02:C02:G01:S03,
+@InProceedings{ICUS02:C02:G01:S03,
 crossref={ICUS02},
 title={Crisis of Science (or of ''Scientism'') in
 Modern Culture and Society},
@@ -248,7 +248,7 @@ author={Masini, Giancarlo}
 
 
 
-@set{ICUS02:C02:G02,
+@Set{ICUS02:C02:G02,
   entryset = {ICUS02:C02:G02:S01},
   pattern = {ICUS02:C02:G02:[S|X]},
   patterntype = {key},
@@ -257,20 +257,20 @@ author={Masini, Giancarlo}
   chairperson = {Mayo, L. H. and Yoshimura, T.},
 }
 
-@inproceedings{ICUS02:C02:G02:S01,
+@InProceedings{ICUS02:C02:G02:S01,
 crossref={ICUS02},
 title={Ideology and Science: Sociological Perspectives},
 subtitle={Can and Should Ideology Be Avoided in a Scientific Civilization?},
 author={Rosenmayr, Leopold}
 }
 
-@inproceedings{ICUS02:C02:G02:S02,
+@InProceedings{ICUS02:C02:G02:S02,
 crossref={ICUS02},
 title={The Moral Responsibility of Scientists},
 author={Rotblat, Joseph}
 }
 
-@inproceedings{ICUS02:C02:G02:S03,
+@InProceedings{ICUS02:C02:G02:S03,
 crossref={ICUS02},
 title={Reorientation of Modern Science},
 author={Wang, Wei-Noon}
@@ -278,7 +278,7 @@ author={Wang, Wei-Noon}
 
 
 
-@set{ICUS02:C02:G03,
+@Set{ICUS02:C02:G03,
   entryset = {ICUS02:C02:G03:S01},
   pattern = {ICUS02:C02:G03:[S|X]},
   patterntype = {key},
@@ -287,19 +287,19 @@ author={Wang, Wei-Noon}
   chairperson = {Dror, Y. and Yoshimura, T.},
 }
 
-@inproceedings{ICUS02:C02:G03:S01,
+@InProceedings{ICUS02:C02:G03:S01,
 crossref={ICUS02},
 title={Technology and Taboo Transfer},
 author={Amin-Arsala, Betsy}
 }
 
-@inproceedings{ICUS02:C02:G03:S02,
+@InProceedings{ICUS02:C02:G03:S02,
 crossref={ICUS02},
 title={Technology Assessment and Public Policy},
 author={Coates, Vary T.}
 }
 
-@inproceedings{ICUS02:C02:G03:S03,
+@InProceedings{ICUS02:C02:G03:S03,
 crossref={ICUS02},
 title={Transexperiential Inquiry},
 author={Jantsch, Erich}
@@ -307,7 +307,7 @@ author={Jantsch, Erich}
 
 
 
-@set{ICUS02:C02:G04,
+@Set{ICUS02:C02:G04,
   entryset = {ICUS02:C02:G04:S01},
   pattern = {ICUS02:C02:G04:[S|X]},
   patterntype = {key},
@@ -316,20 +316,20 @@ author={Jantsch, Erich}
   chairperson = {Wold, H. and Kumon, S.},
 }
 
-@inproceedings{ICUS02:C02:G04:S01,
+@InProceedings{ICUS02:C02:G04:S01,
 crossref={ICUS02},
 title={Impact of Social Justice Concepts on Anticipatory Project
 Assessment Function},
 author={Mayo, Louis Harkey}
 }
 
-@inproceedings{ICUS02:C02:G04:S02,
+@InProceedings{ICUS02:C02:G04:S02,
 crossref={ICUS02},
 title={Moral Values and Social Experimentation},
 author={Riecken, Henry William}
 }
 
-@inproceedings{ICUS02:C02:G04:S03,
+@InProceedings{ICUS02:C02:G04:S03,
 crossref={ICUS02},
 title={Science \& Technology and Society},
 author={Strasser, Gabor}
@@ -337,7 +337,7 @@ author={Strasser, Gabor}
 
 
 
-@set{ICUS02:C02:G05,
+@Set{ICUS02:C02:G05,
   entryset = {ICUS02:C02:G05:S01},
   pattern = {ICUS02:C02:G05:[S|X]},
   patterntype = {key},
@@ -346,19 +346,19 @@ author={Strasser, Gabor}
   chairperson = {Rosenmayr, L. and Strasser, G.},
 }
 
-@inproceedings{ICUS02:C02:G05:S01,
+@InProceedings{ICUS02:C02:G05:S01,
 crossref={ICUS02},
 title={The Future of the Life Sciences and Moral Values},
 author={Atsumi, Kazuhiko}
 }
 
-@inproceedings{ICUS02:C02:G05:S02,
+@InProceedings{ICUS02:C02:G05:S02,
 crossref={ICUS02},
 title={An Anthropocentric View of Science and the Teaching of Science},
 author={Anderson, O. Roger}
 }
 
-@inproceedings{ICUS02:C02:G05:S03,
+@InProceedings{ICUS02:C02:G05:S03,
 crossref={ICUS02},
 title={The Role of Vocational Agricultural Education in Developing
 Agricultural Technology in Korea},
@@ -367,7 +367,7 @@ author={Baick, Dai Hyen}
 
 
 
-@set{ICUS02:C02:G06,
+@Set{ICUS02:C02:G06,
   entryset = {ICUS02:C02:G06:S01},
   pattern = {ICUS02:C02:G06:[S|X]},
   patterntype = {key},
@@ -376,55 +376,55 @@ author={Baick, Dai Hyen}
   chairperson = {Rotblat, J. and Atsumi, K.},
 }
 
-@inproceedings{ICUS02:C02:G06:S01,
+@InProceedings{ICUS02:C02:G06:S01,
 crossref={ICUS02},
 title={Science for the People: An Experiment in Communication},
 author={Suzuki, David Takayoshi}
 }
 
-@inproceedings{ICUS02:C02:G06:S02,
+@InProceedings{ICUS02:C02:G06:S02,
 crossref={ICUS02},
 title={The University in Transition, (II) Currents and Whirlpools},
 author={Wold, Herman Ole Andraeas}
 }
 
-@inproceedings{ICUS02:C02:G06:S03,
+@InProceedings{ICUS02:C02:G06:S03,
 crossref={ICUS02},
 title={An Academic Research in Old Korea},
 author={Choh, Soon Tahk}
 }
 
-@inproceedings{ICUS02:P03,
+@InProceedings{ICUS02:P03,
 crossref={ICUS02},
 title={Has Man a Future?},
 author={Taylor, Gordon Ramsay Rattray}
 }
 
-@inproceedings{ICUS02:P04,
+@InProceedings{ICUS02:P04,
 crossref={ICUS02},
 title={Technology and the Future Society},
 author={Coates, Joseph F.}
 }
 
-@inproceedings{ICUS02:P05,
+@InProceedings{ICUS02:P05,
 crossref={ICUS02},
 title={The Science of Behavior and the Internal Universe},
 author={Gantt, William H.}
 }
 
-@inproceedings{ICUS02:P06,
+@InProceedings{ICUS02:P06,
 crossref={ICUS02},
 title={The Significance and Future of the Scientist's Code},
 author={Courmand, Andr{\'{e}} F.}
 }
 
-@inproceedings{ICUS02:P07,
+@InProceedings{ICUS02:P07,
 crossref={ICUS02},
 title={Science, Technology and the Development Process},
 author={Long, Franklin Asbury}
 }
 
-@inproceedings{ICUS02:P08,
+@InProceedings{ICUS02:P08,
 crossref={ICUS02},
 title={Antiscience as Expressed by a Professional Scientist:
 A Non-European View},
