--- a/inst/extdata/bibset-raw/icus03.bib
+++ b/inst/extdata/bibset-raw/icus03.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS03,
+@Proceedings{ICUS03,
 title={Science and Absolute Values},
 titleaddon={Third International Conference on the Unity of the Sciences},
 shorttitle={ICUS III},
@@ -12,25 +12,25 @@ urldate={2023-05-10},
 keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS03:P01,
+@InProceedings{ICUS03:P01,
 crossref={ICUS03},
 title={Founder's address},
 author={Moon, Sun Myung}
 }
 
-@inproceedings{ICUS03:P02,
+@InProceedings{ICUS03:P02,
 crossref={ICUS03},
 title={Keynote address},
 author={Mellanby, Kenneth}
 }
 
-@inproceedings{ICUS03:P03,
+@InProceedings{ICUS03:P03,
 crossref={ICUS03},
 title={The values of knowledge},
 author={Libby, Willard F.}
 }
 
-@inproceedings{ICUS03:P04,
+@InProceedings{ICUS03:P04,
 crossref={ICUS03},
 title={Science and higher values},
 author={Martin, A.J.P.}
@@ -38,7 +38,7 @@ author={Martin, A.J.P.}
 
 
 
-@set{ICUS03:C01,
+@Set{ICUS03:C01,
 entryset={ICUS03:C01:G01:S01},
   pattern = {ICUS03:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -46,7 +46,7 @@ settype={Committee},
 title={Quality of life: physical, mental and spiritual aspects}
 }
 
-@set{ICUS03:C01:G01,
+@Set{ICUS03:C01:G01,
   entryset = {ICUS03:C01:G01:S01},
   pattern = {ICUS03:C01:G01:[S|X]},
   patterntype = {key},
@@ -55,32 +55,32 @@ title={Quality of life: physical, mental and spiritual aspects}
   chairperson = {Cook, S. L.},
 }
 
-@inproceedings{ICUS03:C01:G01:S01,
+@InProceedings{ICUS03:C01:G01:S01,
 crossref={ICUS03},
 title={Does the quality of life have to be quantified?},
 author={Ackoff, Russell L.}
 }
 
-@inproceedings{ICUS03:C01:G01:S02,
+@InProceedings{ICUS03:C01:G01:S02,
 crossref={ICUS03},
 title={The quality of life as seen by an applied scientists},
 author={Thring, M.W.}
 }
 
-@inproceedings{ICUS03:C01:G01:S03,
+@InProceedings{ICUS03:C01:G01:S03,
 crossref={ICUS03},
 title={Science and absolute values},
 author={Szent-Gy{\"o}rgyi, Albert}
 }
 
-@inproceedings{ICUS03:C01:G01:S04,
+@InProceedings{ICUS03:C01:G01:S04,
 crossref={ICUS03},
 title={Can science help a social group to clarify and evaluate
 its objectives?},
 author={Goodeve, Charles}
 }
 
-@inproceedings{ICUS03:C01:G01:X05,
+@InProceedings{ICUS03:C01:G01:X05,
 crossref={ICUS03},
 title={Commentary},
 author={Cook, Stephen L. and Pikas, A. and Adrian, Edgar Douglas
@@ -89,7 +89,7 @@ and Grano, Olavi J.}
 
 
 
-@set{ICUS03:C01:G02,
+@Set{ICUS03:C01:G02,
   entryset = {ICUS03:C01:G02:S01},
   pattern = {ICUS03:C01:G02:[S|X]},
   patterntype = {key},
@@ -98,32 +98,32 @@ and Grano, Olavi J.}
   chairperson = {Cook, S. L.},
 }
 
-@inproceedings{ICUS03:C01:G02:S01,
+@InProceedings{ICUS03:C01:G02:S01,
 crossref={ICUS03},
 title={Valuing ourselves: let man be man},
 author={Cragg, A. Kenneth}
 }
 
-@inproceedings{ICUS03:C01:G02:S02,
+@InProceedings{ICUS03:C01:G02:S02,
 crossref={ICUS03},
 title={Man's dominion and the nature of man},
 author={Dunstan, Gordon R.}
 }
 
-@inproceedings{ICUS03:C01:G02:S03,
+@InProceedings{ICUS03:C01:G02:S03,
 crossref={ICUS03},
 title={Our concepts of the good and the right},
 subtitle={their status and origin},
 author={Halsbury, Tony}
 }
 
-@inproceedings{ICUS03:C01:G02:S04,
+@InProceedings{ICUS03:C01:G02:S04,
 crossref={ICUS03},
 title={Meditation techniques and the quality of life},
 author={Josephson, Brian D.}
 }
 
-@inproceedings{ICUS03:C01:G02:X05,
+@InProceedings{ICUS03:C01:G02:X05,
 crossref={ICUS03},
 title={Commentary},
 author={Rosenmayr, Leopold and Cragg, A. Kenneth and Dunstan, Gordon R.
@@ -132,7 +132,7 @@ and Jones, Hardin B.}
 
 
 
-@set{ICUS03:C01:G03,
+@Set{ICUS03:C01:G03,
   entryset = {ICUS03:C01:G03:S01},
   pattern = {ICUS03:C01:G03:[S|X]},
   patterntype = {key},
@@ -141,25 +141,25 @@ and Jones, Hardin B.}
   chairperson = {Cook, S. L.},
 }
 
-@inproceedings{ICUS03:C01:G03:S01,
+@InProceedings{ICUS03:C01:G03:S01,
 crossref={ICUS03},
 title={Will human life remain an absolute value?},
 author={Forssmann, W.Th.O.}
 }
 
-@inproceedings{ICUS03:C01:G03:S02,
+@InProceedings{ICUS03:C01:G03:S02,
 crossref={ICUS03},
 title={Measurement of health and human life values},
 author={Jones, Hardin B.}
 }
 
-@inproceedings{ICUS03:C01:G03:S03,
+@InProceedings{ICUS03:C01:G03:S03,
 crossref={ICUS03},
 title={Society, medicine and science},
 author={Raven, R.W.}
 }
 
-@inproceedings{ICUS03:C01:G03:X04,
+@InProceedings{ICUS03:C01:G03:X04,
 crossref={ICUS03},
 title={Commentary},
 author={Cori, Carl Ferdinand and Halsbury, Tony and McMichael, John}
@@ -167,7 +167,7 @@ author={Cori, Carl Ferdinand and Halsbury, Tony and McMichael, John}
 
 
 
-@set{ICUS03:C01:G04,
+@Set{ICUS03:C01:G04,
   entryset = {ICUS03:C01:G04:S01},
   pattern = {ICUS03:C01:G04:[S|X]},
   patterntype = {key},
@@ -176,31 +176,31 @@ author={Cori, Carl Ferdinand and Halsbury, Tony and McMichael, John}
   chairperson = {Cook, S. L.},
 }
 
-@inproceedings{ICUS03:C01:G04:S01,
+@InProceedings{ICUS03:C01:G04:S01,
 crossref={ICUS03},
 title={Qualities of human ageing: a sociological perspective},
 author={Rosenmayr, Leopold and Rosenmayr, H.}
 }
 
-@inproceedings{ICUS03:C01:G04:S02,
+@InProceedings{ICUS03:C01:G04:S02,
 crossref={ICUS03},
 title={The question of economic growth in a finite world},
 author={Maddox, John}
 }
 
-@inproceedings{ICUS03:C01:G04:S03,
+@InProceedings{ICUS03:C01:G04:S03,
 crossref={ICUS03},
 title={About natural man and environmental design},
 author={Geist, Valerius}
 }
 
-@inproceedings{ICUS03:C01:G04:S04,
+@InProceedings{ICUS03:C01:G04:S04,
 crossref={ICUS03},
 title={The increasing need for synthesis as viewed in a worldwide context},
 author={Strasser, Gabor}
 }
 
-@inproceedings{ICUS03:C01:G04:X05,
+@InProceedings{ICUS03:C01:G04:X05,
 crossref={ICUS03},
 title={Commentary},
 author={Covian, Miguel R. and de Jouvenel, H. and Davies, P.M.C. and Goldsmith, Maurice}
@@ -209,7 +209,7 @@ author={Covian, Miguel R. and de Jouvenel, H. and Davies, P.M.C. and Goldsmith, 
 
 
 
-@set{ICUS03:C02,
+@Set{ICUS03:C02,
 entryset={ICUS03:C02:G01:S01},
   pattern = {ICUS03:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -217,7 +217,7 @@ settype={Track},
 title={Value change and absolute values}
 }
 
-@set{ICUS03:C02:G01,
+@Set{ICUS03:C02:G01,
   entryset = {ICUS03:C02:G01:S01},
   pattern = {ICUS03:C02:G01:[S|X]},
   patterntype = {key},
@@ -226,32 +226,32 @@ title={Value change and absolute values}
   chairperson = {Mellanby, Kenneth},
 }
 
-@inproceedings{ICUS03:C02:G01:S01,
+@InProceedings{ICUS03:C02:G01:S01,
 crossref={ICUS03},
 title={What science can do},
 author={Coulomb, J.}
 }
 
-@inproceedings{ICUS03:C02:G01:S02,
+@InProceedings{ICUS03:C02:G01:S02,
 crossref={ICUS03},
 title={Science and value: the challenge to self-humanization},
 author={Cantore, Enrico}
 }
 
-@inproceedings{ICUS03:C02:G01:S03,
+@InProceedings{ICUS03:C02:G01:S03,
 crossref={ICUS03},
 title={Value systems and value change},
 author={de Reuck, Anthony V. S. and de Reuck, Marjorie}
 }
 
-@inproceedings{ICUS03:C02:G01:S04,
+@InProceedings{ICUS03:C02:G01:S04,
 crossref={ICUS03},
 title={Value change through increased communication},
-subtitle={a suggestion for a theory of tolerance},
+subtitle={A suggestion for a theory of tolerance},
 author={Webster, Richard T.}
 }
 
-@inproceedings{ICUS03:C02:G01:X05,
+@InProceedings{ICUS03:C02:G01:X05,
 crossref={ICUS03},
 title={Commentary},
 author={Cournand, André F. and Chagas, C. and Chance, M.R.A. and Mascall, Eric Lionel}
@@ -259,7 +259,7 @@ author={Cournand, André F. and Chagas, C. and Chance, M.R.A. and Mascall, Eric 
 
 
 
-@set{ICUS03:C02:G02,
+@Set{ICUS03:C02:G02,
   entryset = {ICUS03:C02:G02:S01},
   pattern = {ICUS03:C02:G02:[S|X]},
   patterntype = {key},
@@ -268,31 +268,31 @@ author={Cournand, André F. and Chagas, C. and Chance, M.R.A. and Mascall, Eric 
   chairperson = {Mellanby, Kenneth},
 }
 
-@inproceedings{ICUS03:C02:G02:S01,
+@InProceedings{ICUS03:C02:G02:S01,
 crossref={ICUS03},
 title={In quest of questions},
 author={Ford, Hugh}
 }
 
-@inproceedings{ICUS03:C02:G02:S02,
+@InProceedings{ICUS03:C02:G02:S02,
 crossref={ICUS03},
 title={Human value in future - from the viewpoint of a life scientist},
 author={Atsumi, Kazuhiko}
 }
 
-@inproceedings{ICUS03:C02:G02:S03,
+@InProceedings{ICUS03:C02:G02:S03,
 crossref={ICUS03},
 title={On the absolute},
 author={Hein, Piet}
 }
 
-@inproceedings{ICUS03:C02:G02:S04,
+@InProceedings{ICUS03:C02:G02:S04,
 crossref={ICUS03},
 title={The quest for absolute values},
 author={Jantsch, Erich}
 }
 
-@inproceedings{ICUS03:C02:G02:X05,
+@InProceedings{ICUS03:C02:G02:X05,
 crossref={ICUS03},
 title={Commentary},
 author={Ingram, David John Edward and Allegra, L. and Dou, Alberto M. and Smart, Ninian}
@@ -300,7 +300,7 @@ author={Ingram, David John Edward and Allegra, L. and Dou, Alberto M. and Smart,
 
 
 
-@set{ICUS03:C02:G03,
+@Set{ICUS03:C02:G03,
   entryset = {ICUS03:C02:G03:S01},
   pattern = {ICUS03:C02:G03:[S|X]},
   patterntype = {key},
@@ -309,25 +309,25 @@ author={Ingram, David John Edward and Allegra, L. and Dou, Alberto M. and Smart,
   chairperson = {Mellanby, Kenneth},
 }
 
-@inproceedings{ICUS03:C02:G03:S01,
+@InProceedings{ICUS03:C02:G03:S01,
 crossref={ICUS03},
 title={Contemporary genetics: some ethical considerations},
 author={Mascall, Eric Lionel}
 }
 
-@inproceedings{ICUS03:C02:G03:S02,
+@InProceedings{ICUS03:C02:G03:S02,
 crossref={ICUS03},
 title={A new scale of values for a new changing world},
 author={Basile, Joseph}
 }
 
-@inproceedings{ICUS03:C02:G03:S03,
+@InProceedings{ICUS03:C02:G03:S03,
 crossref={ICUS03},
 title={Does a universal standard of value need to be higher order?},
 author={Smart, Ninian}
 }
 
-@inproceedings{ICUS03:C02:G03:X04,
+@InProceedings{ICUS03:C02:G03:X04,
 crossref={ICUS03},
 title={Commentary},
 author={Paelz, Peter and Dickson, Kwesi A. and Moltmann, Jurgen}
@@ -335,7 +335,7 @@ author={Paelz, Peter and Dickson, Kwesi A. and Moltmann, Jurgen}
 
 
 
-@set{ICUS03:C02:G04,
+@Set{ICUS03:C02:G04,
   entryset = {ICUS03:C02:G04:S01},
   pattern = {ICUS03:C02:G04:[S|X]},
   patterntype = {key},
@@ -344,31 +344,31 @@ author={Paelz, Peter and Dickson, Kwesi A. and Moltmann, Jurgen}
   chairperson = {Mellanby, Kenneth},
 }
 
-@inproceedings{ICUS03:C02:G04:S01,
+@InProceedings{ICUS03:C02:G04:S01,
 crossref={ICUS03},
 title={Human nature and absolute values},
 author={Russell, John L.}
 }
 
-@inproceedings{ICUS03:C02:G04:S02,
+@InProceedings{ICUS03:C02:G04:S02,
 crossref={ICUS03},
 title={Science and technology - a cultural merger},
 author={Gerholm, Tor Ragnar}
 }
 
-@inproceedings{ICUS03:C02:G04:S03,
+@InProceedings{ICUS03:C02:G04:S03,
 crossref={ICUS03},
 title={Science and humanism in a global society},
 author={Laszlo, Ervin}
 }
 
-@inproceedings{ICUS03:C02:G04:S04,
+@InProceedings{ICUS03:C02:G04:S04,
 crossref={ICUS03},
 title={From the pursuit of happiness to solidarity},
 author={Moltmann, Jurgen}
 }
 
-@inproceedings{ICUS03:C02:G04:X05,
+@InProceedings{ICUS03:C02:G04:X05,
 crossref={ICUS03},
 title={Commentary},
 author={Cantore, Enrico and Webster, R.T. and Jantsch, Erich and Hersch, J.}
@@ -376,14 +376,15 @@ author={Cantore, Enrico and Webster, R.T. and Jantsch, Erich and Hersch, J.}
 
 
 
-@set{ICUS03:C03,
+@Set{ICUS03:C03,
 entryset={ICUS03:C03:G01:S01},
   pattern = {ICUS03:C03:G\d\d:[S|X]},
-  patterntype = {key},settype={Track},
-title={The unity of science}
+  patterntype = {key},
+  settype={Track},
+  title={The unity of science}
 }
 
-@set{ICUS03:C03:G01,
+@Set{ICUS03:C03:G01,
   entryset = {ICUS03:C03:G01:S01},
   pattern = {ICUS03:C03:G01:[S|X]},
   patterntype = {key},
@@ -392,31 +393,31 @@ title={The unity of science}
   chairperson = {Crombie, A. C.},
 }
 
-@inproceedings{ICUS03:C03:G01:S01,
-crossref={ICUS03},
-title={Unity of science as a problem of scientific method},
-author={Meurers, Joseph}
+@InProceedings{ICUS03:C03:G01:S01,
+  crossref={ICUS03},
+  title={Unity of science as a problem of scientific method},
+  author={Meurers, Joseph}
 }
 
-@inproceedings{ICUS03:C03:G01:S02,
+@InProceedings{ICUS03:C03:G01:S02,
 crossref={ICUS03},
 title={Doubt and certainty in science},
 author={Hodgson, Peter E.}
 }
 
-@inproceedings{ICUS03:C03:G01:S03,
+@InProceedings{ICUS03:C03:G01:S03,
 crossref={ICUS03},
 title={Facts and values and social sciences},
 author={Barker, Eileen V.}
 }
 
-@inproceedings{ICUS03:C03:G01:S04,
+@InProceedings{ICUS03:C03:G01:S04,
 crossref={ICUS03},
 title={On method in science and religion},
 author={Anderson, O. Roger}
 }
 
-@inproceedings{ICUS03:C03:G01:X05,
+@InProceedings{ICUS03:C03:G01:X05,
 crossref={ICUS03},
 title={Commentary},
 author={Kuypers, Karel and Roger, J. and Watkins, J.W.N. and Hilpinen, R.}
@@ -424,7 +425,7 @@ author={Kuypers, Karel and Roger, J. and Watkins, J.W.N. and Hilpinen, R.}
 
 
 
-@set{ICUS03:C03:G02,
+@Set{ICUS03:C03:G02,
   entryset = {ICUS03:C03:G02:S01},
   pattern = {ICUS03:C03:G02:[S|X]},
   patterntype = {key},
@@ -433,25 +434,25 @@ author={Kuypers, Karel and Roger, J. and Watkins, J.W.N. and Hilpinen, R.}
   chairperson = {Crombie, A. C.},
 }
 
-@inproceedings{ICUS03:C03:G02:S01,
+@InProceedings{ICUS03:C03:G02:S01,
 crossref={ICUS03},
 title={The soluble and the insoluble},
 author={Luria, Salvador E. and Luria, Z.}
 }
 
-@inproceedings{ICUS03:C03:G02:S02,
+@InProceedings{ICUS03:C03:G02:S02,
 crossref={ICUS03},
 title={Structuralism and biology},
 author={Stent, Gunther Siegmund}
 }
 
-@inproceedings{ICUS03:C03:G02:S03,
+@InProceedings{ICUS03:C03:G02:S03,
 crossref={ICUS03},
 title={Hard and soft components in natural and social science},
 author={Groenewold, Hilbrand J.}
 }
 
-@inproceedings{ICUS03:C03:G02:X04,
+@InProceedings{ICUS03:C03:G02:X04,
 crossref={ICUS03},
 title={Commentary},
 author={Riecken, Henry William and Jeuken, M. and Schopper, Erwin K.}
@@ -459,7 +460,7 @@ author={Riecken, Henry William and Jeuken, M. and Schopper, Erwin K.}
 
 
 
-@set{ICUS03:C03:G03,
+@Set{ICUS03:C03:G03,
   entryset = {ICUS03:C03:G03:S01},
   pattern = {ICUS03:C03:G03:[S|X]},
   patterntype = {key},
@@ -468,25 +469,25 @@ author={Riecken, Henry William and Jeuken, M. and Schopper, Erwin K.}
   chairperson = {Crombie, A. C.},
 }
 
-@inproceedings{ICUS03:C03:G03:S01,
+@InProceedings{ICUS03:C03:G03:S01,
 crossref={ICUS03},
 title={The role of information science in the unification of the sciences},
 author={Kitagawa, T.}
 }
 
-@inproceedings{ICUS03:C03:G03:S02,
+@InProceedings{ICUS03:C03:G03:S02,
 crossref={ICUS03},
 title={Three elementary non-linear relations scoring for and against unity},
 author={Fucks, Wilhelm}
 }
 
-@inproceedings{ICUS03:C03:G03:S03,
+@InProceedings{ICUS03:C03:G03:S03,
 crossref={ICUS03},
 title={Economic analysis: economic policy and absolute values},
 author={Whitehead, D.H.}
 }
 
-@inproceedings{ICUS03:C03:G03:X04,
+@InProceedings{ICUS03:C03:G03:X04,
 crossref={ICUS03},
 title={Commentary},
 author={Buckley, Walter F. and Scorer, Richard S. and Anderson, O. Roger}
@@ -494,7 +495,7 @@ author={Buckley, Walter F. and Scorer, Richard S. and Anderson, O. Roger}
 
 
 
-@set{ICUS03:C03:G04,
+@Set{ICUS03:C03:G04,
   entryset = {ICUS03:C03:G04:S01},
   pattern = {ICUS03:C03:G04:[S|X]},
   patterntype = {key},
@@ -503,31 +504,31 @@ author={Buckley, Walter F. and Scorer, Richard S. and Anderson, O. Roger}
   chairperson = {Crombie, A. C.},
 }
 
-@inproceedings{ICUS03:C03:G04:S01,
+@InProceedings{ICUS03:C03:G04:S01,
 crossref={ICUS03},
 title={On the possibility of scientific evaluation},
 author={Kerber, Walter}
 }
 
-@inproceedings{ICUS03:C03:G04:S02,
+@InProceedings{ICUS03:C03:G04:S02,
 crossref={ICUS03},
 title={An exact method in social sciences},
 author={Rödding, Walburga}
 }
 
-@inproceedings{ICUS03:C03:G04:S03,
+@InProceedings{ICUS03:C03:G04:S03,
 crossref={ICUS03},
 title={Science and social control},
 author={Goldsmith, Edward}
 }
 
-@inproceedings{ICUS03:C03:G04:S04,
+@InProceedings{ICUS03:C03:G04:S04,
 crossref={ICUS03},
 title={Popular and professional illusions about the scientific method},
 author={Scorer, Richard S.}
 }
 
-@inproceedings{ICUS03:C03:G04:X05,
+@InProceedings{ICUS03:C03:G04:X05,
 crossref={ICUS03},
 title={Commentary},
 author={Tucker, J. and Beck, A. and Fucks, Wilhelm and Goldsmith, Edward}
@@ -535,7 +536,7 @@ author={Tucker, J. and Beck, A. and Fucks, Wilhelm and Goldsmith, Edward}
 
 
 
-@set{ICUS03:C04,
+@Set{ICUS03:C04,
 entryset={ICUS03:C04:G01:S01},
   pattern = {ICUS03:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -543,7 +544,7 @@ settype={Track},
 title={The idea of the university in a troubled society}
 }
 
-@set{ICUS03:C04:G01,
+@Set{ICUS03:C04:G01,
   entryset = {ICUS03:C04:G01:S01},
   pattern = {ICUS03:C04:G01:[S|X]},
   patterntype = {key},
@@ -552,40 +553,40 @@ title={The idea of the university in a troubled society}
   chairperson = {Kurti, Nicholas},
 }
 
-@inproceedings{ICUS03:C04:G01:S01,
+@InProceedings{ICUS03:C04:G01:S01,
 crossref={ICUS03},
 title={Educational institutions and society in Pakistan},
 author={Husain, M.}
 }
 
-@inproceedings{ICUS03:C04:G01:S02,
+@InProceedings{ICUS03:C04:G01:S02,
 crossref={ICUS03},
 title={The political attitudes of university students in Taiwan},
 author={Jiang, Joseph P.}
 }
 
-@inproceedings{ICUS03:C04:G01:S03,
+@InProceedings{ICUS03:C04:G01:S03,
 crossref={ICUS03},
 title={Ideology and practice of the democratic university
 in the Netherlands as instituted by the law of 1970},
 author={Rörsch, Arthur}
 }
 
-@inproceedings{ICUS03:C04:G01:S04,
+@InProceedings{ICUS03:C04:G01:S04,
 crossref={ICUS03},
 title={The university in its social setting},
 subtitle={the university in transition III},
 author={Wold, Herman Ole Andreaas}
 }
 
-@inproceedings{ICUS03:C04:G01:X05,
+@InProceedings{ICUS03:C04:G01:X05,
 crossref={ICUS03},
 title={Commentary},
 author={Pleijel, A. and Pratt, Edward O. and Miyazima, Tatsuoki and Meissner, Werner}
 }
 
 
-@set{ICUS03:C04:G02,
+@Set{ICUS03:C04:G02,
   entryset = {ICUS03:C04:G02:S01},
   pattern = {ICUS03:C04:G02:[S|X]},
   patterntype = {key},
@@ -594,27 +595,27 @@ author={Pleijel, A. and Pratt, Edward O. and Miyazima, Tatsuoki and Meissner, We
   chairperson = {Kurti, Nicholas},
 }
 
-@inproceedings{ICUS03:C04:G02:S01,
+@InProceedings{ICUS03:C04:G02:S01,
 crossref={ICUS03},
 title={Crisis and confrontation},
 subtitle={some problems in contemporary university education},
 author={Brooks, Peter N.}
 }
 
-@inproceedings{ICUS03:C04:G02:S02,
+@InProceedings{ICUS03:C04:G02:S02,
 crossref={ICUS03},
 title={Modern university and the confusion of ideology},
 author={Galperin, Charles}
 }
 
-@inproceedings{ICUS03:C04:G02:X03,
+@InProceedings{ICUS03:C04:G02:X03,
 crossref={ICUS03},
 title={Commentary},
 author={Daugs, D.R. and Wold, Herman Ole Andreaas}
 }
 
 
-@set{ICUS03:C04:G03,
+@Set{ICUS03:C04:G03,
   entryset = {ICUS03:C04:G03:S01},
   pattern = {ICUS03:C04:G03:[S|X]},
   patterntype = {key},
@@ -623,26 +624,26 @@ author={Daugs, D.R. and Wold, Herman Ole Andreaas}
   chairperson = {Kurti, Nicholas},
 }
 
-@inproceedings{ICUS03:C04:G03:S01,
+@InProceedings{ICUS03:C04:G03:S01,
 crossref={ICUS03},
 title={Universities: training for policy making and policy research},
 author={Dror, Yehezkel}
 }
 
-@inproceedings{ICUS03:C04:G03:S02,
+@InProceedings{ICUS03:C04:G03:S02,
 crossref={ICUS03},
 title={Cognitive limitations and public decision making},
 author={Kahneman, D.}
 }
 
-@inproceedings{ICUS03:C04:G03:X03,
+@InProceedings{ICUS03:C04:G03:X03,
 crossref={ICUS03},
 title={Commentary},
 author={Lievegoed, B.C.J. and Himmelweit, Hilde}
 }
 
 
-@set{ICUS03:C04:G04,
+@Set{ICUS03:C04:G04,
   entryset = {ICUS03:C04:G04:S01},
   pattern = {ICUS03:C04:G04:[S|X]},
   patterntype = {key},
@@ -651,52 +652,52 @@ author={Lievegoed, B.C.J. and Himmelweit, Hilde}
   chairperson = {Kurti, Nicholas},
 }
 
-@inproceedings{ICUS03:C04:G04:S01,
+@InProceedings{ICUS03:C04:G04:S01,
 crossref={ICUS03},
 title={International education: a search for cultural and conceptual
 isomorphisms},
 author={Taylor, Alastair M.}
 }
 
-@inproceedings{ICUS03:C04:G04:S02,
+@InProceedings{ICUS03:C04:G04:S02,
 crossref={ICUS03},
 title={Word and thought: towards a harmony of the sciences},
 author={Popper, Hans}
 }
 
-@inproceedings{ICUS03:C04:G04:S03,
+@InProceedings{ICUS03:C04:G04:S03,
 crossref={ICUS03},
 title={The responsibility of scientists and the teachings of oriental
 thought},
 author={Yoon, Se Won}
 }
 
-@inproceedings{ICUS03:C04:G04:S03,
+@InProceedings{ICUS03:C04:G04:S03,
 crossref={ICUS03},
 title={Public recognition of science: its history and its problems},
 author={Cardwell, Donald Stephen Lowell}
 }
 
-@inproceedings{ICUS03:C04:G04:X04,
+@InProceedings{ICUS03:C04:G04:X04,
 crossref={ICUS03},
 title={Commentary},
 author={Broady, Maurice and Prickett, S. and Hook, Sidney and Kastler, Alfred}
 }
 
-@inproceedings{ICUS03:P05,
+@InProceedings{ICUS03:P05,
 crossref={ICUS03},
 title={Science and absolute values},
 author={Auger, P.}
 }
 
-@inproceedings{ICUS03:P06,
+@InProceedings{ICUS03:P06,
 crossref={ICUS03},
 title={Adaptability of the nervous system and its relation to chance,
 purposiveness and causality},
 author={Granit, Ragnar A.}
 }
 
-@inproceedings{ICUS03:P07,
+@InProceedings{ICUS03:P07,
 crossref={ICUS03},
 title={Science and the implications of the paranormal},
 author={Taylor, John G.}
