--- a/inst/extdata/bibset-raw/icus05.bib
+++ b/inst/extdata/bibset-raw/icus05.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS05,
+@Proceedings{ICUS05,
   title = {The Search for Absolute Values: Harmony Among the Sciences},
   titleaddon = {The Fifth International Conference on the Unity of the Sciences},
   shorttitle = {ICUS V},
@@ -12,55 +12,55 @@
   keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS05:P01,
+@InProceedings{ICUS05:P01,
   crossref = {ICUS05},
   title = {Founder's Welcoming Address},
   author = {Sun Myung Moon},
 }
 
-@inproceedings{ICUS05:P02,
+@InProceedings{ICUS05:P02,
   crossref = {ICUS05},
   title = {Chairman's Address},
   author = {John Eccles},
 }
 
-@inproceedings{ICUS05:P03,
+@InProceedings{ICUS05:P03,
   crossref = {ICUS05},
   title = {Committee I Address},
   author = {Sontag, Frederick},
 }
 
-@inproceedings{ICUS05:P04,
+@InProceedings{ICUS05:P04,
   crossref = {ICUS05},
   title = {Committee II Address},
   author = {Kaplan, Morton A.},
 }
 
-@inproceedings{ICUS05:P05,
+@InProceedings{ICUS05:P05,
   crossref = {ICUS05},
   title = {Committee III Address},
   author = {Mellanby, Kenneth},
 }
 
-@inproceedings{ICUS05:P06,
+@InProceedings{ICUS05:P06,
   crossref = {ICUS05},
   title = {Committee IV Address},
   author = {Wigner, Eugene P.},
 }
 
-@inproceedings{ICUS05:P07,
+@InProceedings{ICUS05:P07,
   crossref = {ICUS05},
   title = {Concluding Plenary: Topic related to theme of conference},
   author = {Zichichi, Antonino},
 }
 
-@inproceedings{ICUS05:P08,
+@InProceedings{ICUS05:P08,
   crossref = {ICUS05},
   title = {Concluding Plenary: Topic related to theme of conference},
   author = {Thorpe, W. H.},
 }
 
-@inproceedings{ICUS05:P09,
+@InProceedings{ICUS05:P09,
   crossref = {ICUS05},
   title = {Concluding Plenary: Topic related to theme of conference},
   author = {Rescher, Nicholas},
@@ -85,21 +85,21 @@
   chairperson = {Parrinder, Geoffrey},
 }
 
-@inproceedings{ICUS05:C01:G01:S01,
+@InProceedings{ICUS05:C01:G01:S01,
   crossref = {ICUS05},
   title = {Great world religions: similarities and differences},
   author = {Parrinder, Geoffrey},
   commentator = {Kaufmann, Walter},
 }
 
-@inproceedings{ICUS05:C01:G01:S02,
+@InProceedings{ICUS05:C01:G01:S02,
   crossref = {ICUS05},
   title = {Christianity as symbolic logic: an explanation of ambiguity},
   author = {Martin, D. A.},
   commentator = {Abe, Masao},
 }
 
-@inproceedings{ICUS05:C01:G01:S03,
+@InProceedings{ICUS05:C01:G01:S03,
   crossref = {ICUS05},
   title = {Religious values},
   author = {Werblowsky, R. J. Zwi},
@@ -116,21 +116,21 @@
   author = {Dufrenne, Mikel},
 }
 
-@inproceedings{ICUS05:C01:G02:S01,
+@InProceedings{ICUS05:C01:G02:S01,
   crossref = {ICUS05},
   title = {The crisis of the notion of values from Nietzsche until today},
   author = {Vattimo, Gianni},
   commentator = {Naess, Arne and Rose, Mary Carman},
 }
 
-@inproceedings{ICUS05:C01:G02:S02,
+@InProceedings{ICUS05:C01:G02:S02,
   crossref = {ICUS05},
   title = {Is it still possible to elaborate a philosophy, and especially a philosophy of values},
   author = {Dufrenne, Mikel},
   commentator = {Vivas, Eliseo and Charles, Daniel},
 }
 
-@inproceedings{ICUS05:C01:G02:S03,
+@InProceedings{ICUS05:C01:G02:S03,
   crossref = {ICUS05},
   title = {The function of reason in Western philosophy, especially in political philosophy},
   author = {Becker, Werner},
@@ -148,21 +148,21 @@
   chairperson = {Rubenstein, Richard L.},
 }
 
-@inproceedings{ICUS05:C01:G03:S01,
+@InProceedings{ICUS05:C01:G03:S01,
   crossref = {ICUS05},
   title = {The elect and the preterite},
   author = {Rubenstein, Richard L.},
   commentator = {Roth, John K. and Rumscheidt, H. Martin},
 }
 
-@inproceedings{ICUS05:C01:G03:S02,
+@InProceedings{ICUS05:C01:G03:S02,
   crossref = {ICUS05},
   title = {From salvation to utopia: technological society in Christian prospect},
   author = {Vahanian, Gabriel},
   commentator = {Ferrell, Donald R.},
 }
 
-@inproceedings{ICUS05:C01:G03:S03,
+@InProceedings{ICUS05:C01:G03:S03,
   crossref = {ICUS05},
   title = {What do religion, politics, and science each contribute to the creation of a good society},
   author = {Richardson, Herbert},
@@ -189,28 +189,28 @@
   author = {Segre, Dan V.},
 }
 
-@inproceedings{ICUS05:C02:G01:S01,
+@InProceedings{ICUS05:C02:G01:S01,
   crossref = {ICUS05},
   title = {Ways, means and the absolute},
   author = {Segre, Dan V.},
   commentator = {Handlin, Oscar},
 }
 
-@inproceedings{ICUS05:C02:G01:S02,
+@InProceedings{ICUS05:C02:G01:S02,
   crossref = {ICUS05},
   title = {The problem of values and the challenge of a world in change},
   author = {Berger, René},
   commentator = {Pöggeler, Otto and Vernon, Glenn M.},
 }
 
-@inproceedings{ICUS05:C02:G01:S03,
+@InProceedings{ICUS05:C02:G01:S03,
   crossref = {ICUS05},
   title = {The logic of poetic symbols in the age of science},
   author = {Rannit, Aleksis},
   commentator = {Simon, Ulrich and Treadgold, Donald W.},
 }
 
-@inproceedings{ICUS05:C02:G01:S04,
+@InProceedings{ICUS05:C02:G01:S04,
   crossref = {ICUS05},
   title = {Meaning, value and personality},
   author = {Royce, Joseph R.},
@@ -228,21 +228,21 @@
   chairperson = {Lerner, Daniel},
 }
 
-@inproceedings{ICUS05:C02:G02:S01,
+@InProceedings{ICUS05:C02:G02:S01,
   crossref = {ICUS05},
   title = {Methodology in the physical and social sciences},
   author = {Handy, Rollo L.},
   commentator = {{Ben-Dak}, Joseph},
 }
 
-@inproceedings{ICUS05:C02:G02:S02,
+@InProceedings{ICUS05:C02:G02:S02,
   crossref = {ICUS05},
   title = {The causes and prevention of crime in modern society},
   author = {Ferracuti, Franco},
   commentator = {Chomchai, Prachoom and Bissery, Jacqueline},
 }
 
-@inproceedings{ICUS05:C02:G02:S03,
+@InProceedings{ICUS05:C02:G02:S03,
   crossref = {ICUS05},
   title = {Are there absolute values in social science?},
   author = {Lerner, Daniel},
@@ -260,21 +260,21 @@
   chairperson = {King, Alexander},
 }
 
-@inproceedings{ICUS05:C02:G03:S01,
+@InProceedings{ICUS05:C02:G03:S01,
   crossref = {ICUS05},
   title = {Present trends, future dangers and the values of society},
   author = {King, Alexander},
   commentator = {Madden, Carl H.},
 }
 
-@inproceedings{ICUS05:C02:G03:S02,
+@InProceedings{ICUS05:C02:G03:S02,
   crossref = {ICUS05},
   title = {Churches and multinationals in the spread of modern education: a third world perspective},
   author = {Mazrui, Ali A.},
   commentator = {Gislason, Gylfi P.},
 }
 
-@inproceedings{ICUS05:C02:G03:S03,
+@InProceedings{ICUS05:C02:G03:S03,
   crossref = {ICUS05},
   title = {The great religions and world solidarity},
   author = {Laszlo, Ervin},
@@ -301,21 +301,21 @@
   chairperson = {Eigen, Manfred},
 }
 
-@inproceedings{ICUS05:C03:G01:S01,
+@InProceedings{ICUS05:C03:G01:S01,
   crossref = {ICUS05},
   title = {The evolutionary process as a mechanism for building self-organizing systems in biology},
   author = {Schuster, Peter},
   commentator = {Scheer, Bradley T.},
 }
 
-@inproceedings{ICUS05:C03:G01:S02,
+@InProceedings{ICUS05:C03:G01:S02,
   crossref = {ICUS05},
   title = {How life arose on the earth},
   author = {Miller, Stanley L.},
   commentator = {Brasted, Robert C.},
 }
 
-@inproceedings{ICUS05:C03:G01:S03,
+@InProceedings{ICUS05:C03:G01:S03,
   crossref = {ICUS05},
   title = {Genetic codes and the laws of evolution as the bases for our understanding the biological nature of man},
   author = {Kimura, Motoo},
@@ -333,21 +333,21 @@
   chairperson = {Pribram, Karl H.},
 }
 
-@inproceedings{ICUS05:C03:G02:S01,
+@InProceedings{ICUS05:C03:G02:S01,
   crossref = {ICUS05},
   title = {The brain, learning and values},
   author = {Hyden, Holger},
   commentator = {Covian, Miguel R. and White, Robert J.},
 }
 
-@inproceedings{ICUS05:C03:G02:S02,
+@InProceedings{ICUS05:C03:G02:S02,
   crossref = {ICUS05},
   title = {Some effects of the biological state of brain on values associated with mind},
   author = {McGeer, Patrick L.},
   commentator = {Lambo, T. A. and Sannangelantonio, Luce},
 }
 
-@inproceedings{ICUS05:C03:G02:S03,
+@InProceedings{ICUS05:C03:G02:S03,
   crossref = {ICUS05},
   title = {Brain organization in the construction of values: a sociobiological analysis},
   author = {Pribram, Karl H.},
@@ -365,21 +365,21 @@
   chairperson = {Anderson, O. Roger},
 }
 
-@inproceedings{ICUS05:C03:G03:S01,
+@InProceedings{ICUS05:C03:G03:S01,
   crossref = {ICUS05},
   title = {Ecosystem control and its implications for human values},
   author = {Anderson, O. Roger},
   commentator = {Nahvi, Mahmood J. and Maxey, Margaret N.},
 }
 
-@inproceedings{ICUS05:C03:G03:S02,
+@InProceedings{ICUS05:C03:G03:S02,
   crossref = {ICUS05},
   title = {Effects of population growth on the ecosystem},
   author = {Singer, S. Fred},
   commentator = {MacVicar, Robert and Hill, Stuart},
 }
 
-@inproceedings{ICUS05:C03:G03:S03,
+@InProceedings{ICUS05:C03:G03:S03,
   crossref = {ICUS05},
   title = {The impact of nuclear technology on the natural environment and human life},
   author = {Latarjet, Raymond},
@@ -406,21 +406,21 @@
   author = {Kurti, Nicholas},
 }
 
-@inproceedings{ICUS05:C04:G01:S01,
+@InProceedings{ICUS05:C04:G01:S01,
   crossref = {ICUS05},
   title = {Science and values: the cultural importance of the is/ought distinction},
   author = {Radnitzky, Gerard},
   commentator = {Herzberg, Gerhard and Wold, Herman},
 }
 
-@inproceedings{ICUS05:C04:G01:S02,
+@InProceedings{ICUS05:C04:G01:S02,
   crossref = {ICUS05},
   title = {Ethics and science},
   author = {Margenau, Henry},
   commentator = {Nixon, Alan C.},
 }
 
-@inproceedings{ICUS05:C04:G01:S03,
+@InProceedings{ICUS05:C04:G01:S03,
   crossref = {ICUS05},
   title = {Miracles and values},
   author = {Lustig, Harry},
@@ -435,24 +435,24 @@
   patterntype = {key},
   settype = {Group},
   title = {The Present State of Science and Technology and their Potential for the Betterment of Mankind},
-  chairperson = {{Ne'eman}, Yuval},
+  chairperson = {Ne'eman, Yuval},
 }
 
-@inproceedings{ICUS05:C04:G02:S01,
+@InProceedings{ICUS05:C04:G02:S01,
   crossref = {ICUS05},
   title = {Unification and fractionation in science: significance and prospects},
   author = {Shapere, Dudley},
   commentator = {Melvin, Mael A.},
 }
 
-@inproceedings{ICUS05:C04:G02:S02,
+@InProceedings{ICUS05:C04:G02:S02,
   crossref = {ICUS05},
   title = {Science, survival and the goal},
   author = {Ne'eman, Yuval},
   commentator = {Goldsmith, Maurice and Richardson, Roger W.},
 }
 
-@inproceedings{ICUS05:C04:G02:S03,
+@InProceedings{ICUS05:C04:G02:S03,
   crossref = {ICUS05},
   title = {Harmonization of science and technology development with different cultural traditions},
   author = {Cernuschi, Felix},
@@ -469,21 +469,21 @@
   chairperson = {Jones, Reginald V.},
 }
 
-@inproceedings{ICUS05:C04:G03:S01,
+@InProceedings{ICUS05:C04:G03:S01,
   crossref = {ICUS05},
   title = {How far has twentieth century physics changed man's concept of the universe},
   author = {Jones, Reginald V.},
   commentator = {Martin, A. J. P. and Kim, Young-Suh},
 }
 
-@inproceedings{ICUS05:C04:G03:S02,
+@InProceedings{ICUS05:C04:G03:S02,
   crossref = {ICUS05},
   title = {A consideration of the philosophical implications of the new physics},
   author = {Jammer, Max},
   commentator = {Daudel, Raymond and Sudarshan, E. C. G.},
 }
 
-@inproceedings{ICUS05:C04:G03:S03,
+@InProceedings{ICUS05:C04:G03:S03,
   crossref = {ICUS05},
   title = {The mechanism of knowledge: limits to prediction},
   author = {Pringle, J. W. S.},
