--- a/inst/extdata/bibset-raw/icus06.bib
+++ b/inst/extdata/bibset-raw/icus06.bib
@@ -1,4 +1,4 @@
-@proceedings{ICUS06,
+@Proceedings{ICUS06,
   title = {The Search for Absolute Values in a Changing World},
   titleaddon = {The Sixth International Conference on the Unity of the Sciences},
   shorttitle = {ICUS VI},
@@ -12,55 +12,55 @@
   keywords={primary, program, moonist}
 }
 
-@inproceedings{ICUS06:P01,
+@InProceedings{ICUS06:P01,
   crossref = {ICUS06},
   title = {Founder's Welcoming Address},
   author = {Sun Myung Moon},
 }
 
-@inproceedings{ICUS06:P02,
+@InProceedings{ICUS06:P02,
   crossref = {ICUS06},
   title = {chairperson's Address},
   author = {John Eccles},
 }
 
-@inproceedings{ICUS06:P03,
+@InProceedings{ICUS06:P03,
   crossref = {ICUS06},
   title = {Committee I Address},
   author = {Rubenstein, Richard L.},
 }
 
-@inproceedings{ICUS06:P04,
+@InProceedings{ICUS06:P04,
   crossref = {ICUS06},
   title = {Committee II Address},
   author = {Lerner, Daniel},
 }
 
-@inproceedings{ICUS06:P05,
+@InProceedings{ICUS06:P05,
   crossref = {ICUS06},
   title = {Committee III Address},
   author = {Mellanby, Kenneth},
 }
 
-@inproceedings{ICUS06:P06,
+@InProceedings{ICUS06:P06,
   crossref = {ICUS06},
   title = {Committee IV Address},
   author = {Wigner, Eugene P.},
 }
 
-@inproceedings{ICUS06:P07,
+@InProceedings{ICUS06:P07,
   crossref = {ICUS06},
   title = {Concluding Plenary Address},
   author = {Handlin, Oscar},
 }
 
-@inproceedings{ICUS06:P08,
+@InProceedings{ICUS06:P08,
   crossref = {ICUS06},
   title = {Concluding Plenary Address},
   author = {Malik, Charles Habib},
 }
 
-@set{ICUS06:C01,
+@Set{ICUS06:C01,
   entryset = {ICUS06:C01},
   pattern = {ICUS06:C01:G\d\d:[S|X]},
   patterntype = {key},
@@ -69,7 +69,7 @@
   chairperson = {Rubenstein, Richard L.},
 }
 
-@set{ICUS06:C01:G01,
+@Set{ICUS06:C01:G01,
   entryset = {ICUS06:C01:G01:S01},
   pattern = {ICUS06:C01:G01:[S|X]},
   patterntype = {key},
@@ -78,21 +78,21 @@
   chairperson = {Naess, Arne},
 }
 
-@inproceedings{ICUS06:C01:G01:S01,
+@InProceedings{ICUS06:C01:G01:S01,
   crossref = {ICUS06},
   title = {The conflict of ideology and ecology},
   author = {Shepard, Paul},
   commentator = {Kvaloy, Signmund},
 }
 
-@inproceedings{ICUS06:C01:G01:S02,
+@InProceedings{ICUS06:C01:G01:S02,
   crossref = {ICUS06},
   title = {Theory and practice in the environmental movement: notes toward an ecology of experience},
   author = {Rodman, John R.},
   commentator = {Becker, Werner},
 }
 
-@inproceedings{ICUS06:C01:G01:S03,
+@InProceedings{ICUS06:C01:G01:S03,
   crossref = {ICUS06},
   title = {Fields of danger and the wilderness of wisdom},
   author = {Meeker, Joseph W.},
@@ -101,7 +101,7 @@
 
 
 
-@set{ICUS06:C01:G02,
+@Set{ICUS06:C01:G02,
   entryset = {ICUS06:C01:G02:S01},
   pattern = {ICUS06:C01:G02:[S|X]},
   patterntype = {key},
@@ -110,21 +110,21 @@
   author = {Kaufmann, Walter},
 }
 
-@inproceedings{ICUS06:C01:G02:S01,
+@InProceedings{ICUS06:C01:G02:S01,
   crossref = {ICUS06},
   title = {The problems of modernization in 'Hinduism'},
   author = {Ravindra, Ravi},
   commentator = {Chattergee, Margaret},
 }
 
-@inproceedings{ICUS06:C01:G02:S02,
+@InProceedings{ICUS06:C01:G02:S02,
   crossref = {ICUS06},
   title = {Religion and modernization: the general problem and Islamic responses},
   author = {{Al-Nowaihi}, Mohamed},
   commentator = {Khalaf, Samir G.},
 }
 
-@inproceedings{ICUS06:C01:G02:S03,
+@InProceedings{ICUS06:C01:G02:S03,
   crossref = {ICUS06},
   title = {Modernism and modernization in Buddhism},
   author = {Werblowsky, R. J. Zwi},
@@ -133,7 +133,7 @@
 
 
 
-@set{ICUS06:C01:G03,
+@Set{ICUS06:C01:G03,
   entryset = {ICUS06:C01:G03:S01},
   pattern = {ICUS06:C01:G03:[S|X]},
   patterntype = {key},
@@ -142,34 +142,34 @@
   chairperson = {Rumscheidt, H. Martin},
 }
 
-@inproceedings{ICUS06:C01:G03:S01,
+@InProceedings{ICUS06:C01:G03:S01,
   crossref = {ICUS06},
   title = {Metaphors of kinship},
   author = {Bateson, Mary Catherine},
   commentator = {Doughery, Jude P. and Lewis, Warren},
 }
 
-@inproceedings{ICUS06:C01:G03:S02,
+@InProceedings{ICUS06:C01:G03:S02,
   crossref = {ICUS06},
   title = {Authority in a pluralistic world},
   author = {Kliever, Lonnie D.},
   commentator = {Bettis, Joseph D. and Vahanian, Gabriel},
 }
 
-@inproceedings{ICUS06:C01:G03:S03,
+@InProceedings{ICUS06:C01:G03:S03,
   crossref = {ICUS06},
   title = {Faith and multiversity},
   author = {Grand, George B.},
 }
 
-@inproceedings{ICUS06:C01:G03:X06,
+@InProceedings{ICUS06:C01:G03:X06,
   crossref = {ICUS06},
   author = {LeMarier, Jean-Guy and Richardson, Herbert},
 }
 
 
 
-@set{ICUS06:C01:G04,
+@Set{ICUS06:C01:G04,
   entryset = {ICUS06:C01:G04:S01},
   pattern = {ICUS06:C01:G04:[S|X]},
   patterntype = {key},
@@ -178,21 +178,21 @@
   chairperson = {Ferré, Frederick},
 }
 
-@inproceedings{ICUS06:C01:G04:S01,
+@InProceedings{ICUS06:C01:G04:S01,
   crossref = {ICUS06},
   title = {Beyond scientism: science and religion in dialogue},
   author = {Ferrell, Donald R.},
   commentator = {Allshouse, Merle F. and Berkowitz, Morris I.},
 }
 
-@inproceedings{ICUS06:C01:G04:S02,
+@InProceedings{ICUS06:C01:G04:S02,
   crossref = {ICUS06},
   title = {On the structural resemblences in ultimate religious, philosophical and scientific thought},
   author = {Scharfstein, Ben-Ami},
   commentator = {Lieb, Irwin C. and Woody, Susan Minot},
 }
 
-@inproceedings{ICUS06:C01:G04:S03,
+@InProceedings{ICUS06:C01:G04:S03,
   crossref = {ICUS06},
   title = {Persons in recent thought},
   author = {Lewis, H.D.},
@@ -201,7 +201,7 @@
 
 
 
-@set{ICUS06:C02,
+@Set{ICUS06:C02,
   entryset = {ICUS06:C02:G01:S01},
   pattern = {ICUS06:C02:G\d\d:[S|X]},
   patterntype = {key},
@@ -210,7 +210,7 @@
   chairperson = {Lerner, Daniel},
 }
 
-@set{ICUS06:C02:G01,
+@Set{ICUS06:C02:G01,
   entryset = {ICUS06:C02:G01:S01},
   pattern = {ICUS06:C02:G01:[S|X]},
   patterntype = {key},
@@ -219,19 +219,19 @@
   chairperson = {Rao, Y. V. L.},
 }
 
-@inproceedings{ICUS06:C02:G01:S01,
+@InProceedings{ICUS06:C02:G01:S01,
   crossref = {ICUS06},
   title = {Indonesia's television satellite: the first year},
   author = {Alfian},
 }
 
-@inproceedings{ICUS06:C02:G01:S02,
+@InProceedings{ICUS06:C02:G01:S02,
   crossref = {ICUS06},
   title = {Communication in history: the role of science},
   author = {Masini, Giancarlo},
 }
 
-@inproceedings{ICUS06:C02:G01:X03,
+@InProceedings{ICUS06:C02:G01:X03,
   crossref = {ICUS06},
   title = {Comments on {Intercultural Communication in a Changing World}},
   author = {Laszlo, Ervin},
@@ -239,7 +239,7 @@
 
 
 
-@set{ICUS06:C02:G02,
+@Set{ICUS06:C02:G02,
   entryset = {ICUS06:C02:G02:S01},
   pattern = {ICUS06:C02:G02:[S|X]},
   patterntype = {key},
@@ -248,25 +248,25 @@
   chairperson = {Ferracuti, Franco},
 }
 
-@inproceedings{ICUS06:C02:G02:S01,
+@InProceedings{ICUS06:C02:G02:S01,
   crossref = {ICUS06},
   title = {Tracing the sources of violence: the Turkish case},
   author = {Mardin, Serif},
 }
 
-@inproceedings{ICUS06:C02:G02:S02,
+@InProceedings{ICUS06:C02:G02:S02,
   crossref = {ICUS06},
   title = {The roots of violence and problems of control},
   author = {Naidu, Ratna},
 }
 
-@inproceedings{ICUS06:C02:G02:S03,
+@InProceedings{ICUS06:C02:G02:S03,
   crossref = {ICUS06},
   title = {Values, policy and the control of violence},
   author = {Soemardjan, Selo},
 }
 
-@inproceedings{ICUS06:C02:G02:X04,
+@InProceedings{ICUS06:C02:G02:X04,
   crossref = {ICUS06},
   title = {Comments on {Values, Policy and the Control of Violence}},
   author = {Herz, Martin F.},
@@ -274,7 +274,7 @@
 
 
 
-@set{ICUS06:C02:G03,
+@Set{ICUS06:C02:G03,
   entryset = {ICUS06:C02:G03:S01},
   pattern = {ICUS06:C02:G03:[S|X]},
   patterntype = {key},
@@ -283,32 +283,32 @@
   chairperson = {Hauser, Philip M.},
 }
 
-@inproceedings{ICUS06:C02:G03:S01,
+@InProceedings{ICUS06:C02:G03:S01,
   crossref = {ICUS06},
   title = {On problematic aspects of the new economic world order},
   author = {Hauser, Philip M.},
 }
 
-@inproceedings{ICUS06:C02:G03:S02,
+@InProceedings{ICUS06:C02:G03:S02,
   crossref = {ICUS06},
   title = {World development policies: the case of Jordan},
-  author = {{Abu Jaber}, Kamel},
+  author = {Abu Jaber, Kamel},
 }
 
-@inproceedings{ICUS06:C02:G03:S03,
+@InProceedings{ICUS06:C02:G03:S03,
   crossref = {ICUS06},
   title = {Projecting the new economic world order},
   author = {Lerner, Abba P.},
 }
 
-@inproceedings{ICUS06:C02:G03:X04,
+@InProceedings{ICUS06:C02:G03:X04,
   crossref = {ICUS06},
   title = {Comments on {Projecting a New Economic World Order}},
   author = {Singer, S. Fred},
 }
 
 
-@set{ICUS06:C02:G04,
+@Set{ICUS06:C02:G04,
   entryset = {ICUS06:C02:G04:S01},
   pattern = {ICUS06:C02:G04:[S|X]},
   patterntype = {key},
@@ -317,26 +317,26 @@
   chairperson = {Schacter, Oscar},
 }
 
-@inproceedings{ICUS06:C02:G04:S01,
+@InProceedings{ICUS06:C02:G04:S01,
   crossref = {ICUS06},
   title = {Shaping the new international order},
   author = {Berthoin, Georges},
 }
 
-@inproceedings{ICUS06:C02:G04:S02,
+@InProceedings{ICUS06:C02:G04:S02,
   crossref = {ICUS06},
   title = {Can democracy promote development?},
   author = {Gulek, Kasim},
 }
 
-@inproceedings{ICUS06:C02:G04:S03,
+@InProceedings{ICUS06:C02:G04:S03,
   crossref = {ICUS06},
   title = {The shaping of democracy in developing countries},
   author = {Turan, Ilter},
 }
 
 
-@set{ICUS06:C03,
+@Set{ICUS06:C03,
   entryset = {ICUS06:C03:G01:S01},
   pattern = {ICUS06:C03:G\d\d:[S|X]},
   patterntype = {key},
@@ -345,16 +345,16 @@
   chairperson = {Mellanby, Kenneth},
 }
 
-@set{ICUS06:C03:G01,
+@Set{ICUS06:C03:G01,
   entryset = {ICUS06:C03:G01:S01},
   pattern = {ICUS06:C03:G01:[S|X]},
   patterntype = {key},
   settype = {Group},
   title = {The Ethics of Research on Recombinant DNA},
-  chairperson = {{Villee Jr}, Claude A.},
+  chairperson = {Villee Jr, Claude A.},
 }
 
-@inproceedings{ICUS06:C03:G01:X01,
+@InProceedings{ICUS06:C03:G01:X01,
   crossref = {ICUS06},
   title = {Panel discussion on {The Ethics of Research on Recombinant DNA}},
   author = {Alexander, Benjamin and Butler, Gordon C. and Caspari, Ernest W. and Newburgh, Robert W.},
@@ -362,7 +362,7 @@
 
 
 
-@set{ICUS06:C03:G02,
+@Set{ICUS06:C03:G02,
   entryset = {ICUS06:C03:G02:S01},
   pattern = {ICUS06:C03:G02:[S|X]},
   patterntype = {key},
@@ -371,36 +371,36 @@
   chairperson = {Brown, Edwin W.},
 }
 
-@inproceedings{ICUS06:C03:G02:S01,
+@InProceedings{ICUS06:C03:G02:S01,
   crossref = {ICUS06},
   title = {Indigenous practices for the integrated health care system},
   author = {Pillsbury, Barbara L. K.},
   commentator = {Kryspin, Jan},
 }
 
-@inproceedings{ICUS06:C03:G02:S02,
+@InProceedings{ICUS06:C03:G02:S02,
   crossref = {ICUS06},
   title = {Medical education in cross-cultural setting},
   author = {Danaraj, T. J.},
   commentator = {Wescott, Roger W.},
 }
 
-@inproceedings{ICUS06:C03:G02:S03,
+@InProceedings{ICUS06:C03:G02:S03,
   crossref = {ICUS06},
   title = {Meeting health care needs at the neighborhood level in the inner city},
-  author = {{Karefa-Smart}, John},
+  author = {Karefa-Smart, John},
   commentator = {Wren, George R.},
 }
 
-@inproceedings{ICUS06:C03:G02:X04,
+@InProceedings{ICUS06:C03:G02:X04,
   crossref = {ICUS06},
   title = {Comments on {Health Care as a Global Problem: Social and Behavioral Aspects}},
-  author = {{Kubler-Ross}, Elisabeth},
+  author = {Kubler-Ross, Elisabeth},
 }
 
 
 
-@set{ICUS06:C03:G03,
+@Set{ICUS06:C03:G03,
   entryset = {ICUS06:C03:G03:S01},
   pattern = {ICUS06:C03:G03:[S|X]},
   patterntype = {key},
@@ -409,21 +409,21 @@
   chairperson = {Ambrus, Julian L.},
 }
 
-@inproceedings{ICUS06:C03:G03:S01,
+@InProceedings{ICUS06:C03:G03:S01,
   crossref = {ICUS06},
   title = {Health care as a global problem: the need for international cooperation - an internatinal view},
   author = {{Tejada-de-Rivero}, David},
   commentator = {Sukhatme, P. V. and Rakic, Ljubisav},
 }
 
-@inproceedings{ICUS06:C03:G03:S02,
+@InProceedings{ICUS06:C03:G03:S02,
   crossref = {ICUS06},
   title = {Health care in developing countries: a national view},
   author = {Pratt, E. O.},
   commentator = {Akos, Karoly and Gomez, Juan Antonio},
 }
 
-@inproceedings{ICUS06:C03:G03:S03,
+@InProceedings{ICUS06:C03:G03:S03,
   crossref = {ICUS06},
   title = {Health-related research and education as global problems},
   author = {Ambrus, Julian L.},
@@ -432,7 +432,7 @@
 
 
 
-@set{ICUS06:C03:G04,
+@Set{ICUS06:C03:G04,
   entryset = {ICUS06:C03:G04:S01},
   pattern = {ICUS06:C03:G04:[S|X]},
   patterntype = {key},
@@ -441,21 +441,21 @@
   chairperson = {Somit, Albert},
 }
 
-@inproceedings{ICUS06:C03:G04:S01,
+@InProceedings{ICUS06:C03:G04:S01,
   crossref = {ICUS06},
   title = {Biological foundation of altruism, dedication and egoism: the viewpoint of an anthropologist},
   author = {Shepher, Joseph},
   commentator = {Maruyama, Magoroh},
 }
 
-@inproceedings{ICUS06:C03:G04:S02,
+@InProceedings{ICUS06:C03:G04:S02,
   crossref = {ICUS06},
   title = {Biological foundation of altruism, dedication and egoism},
   author = {Barash, David P.},
   commentator = {Danielli, James F.},
 }
 
-@inproceedings{ICUS06:C03:G04:S03,
+@InProceedings{ICUS06:C03:G04:S03,
   crossref = {ICUS06},
   title = {The evolution of altruism},
   author = {Eccles, John},
@@ -464,7 +464,7 @@
 
 
 
-@set{ICUS06:C04,
+@Set{ICUS06:C04,
   entryset = {ICUS06:C04:G01:S01},
   pattern = {ICUS06:C04:G\d\d:[S|X]},
   patterntype = {key},
@@ -473,7 +473,7 @@
   chairperson = {Wigner, Eugene P.},
 }
 
-@set{ICUS06:C04:G01,
+@Set{ICUS06:C04:G01,
   entryset = {ICUS06:C04:G01:S01},
   pattern = {ICUS06:C04:G01:[S|X]},
   patterntype = {key},
@@ -482,14 +482,14 @@
   author = {Toll, John S.},
 }
 
-@inproceedings{ICUS06:C04:G01:S01,
+@InProceedings{ICUS06:C04:G01:S01,
   crossref = {ICUS06},
   title = {Physics and the search for the absolute},
   author = {Jammer, Max},
   commentator = {Yoon, Se-Won},
 }
 
-@inproceedings{ICUS06:C04:G01:S02,
+@InProceedings{ICUS06:C04:G01:S02,
   crossref = {ICUS06},
   title = {Limits of science},
   author = {Wigner, Eugene P.},
@@ -498,7 +498,7 @@
 
 
 
-@set{ICUS06:C04:G02,
+@Set{ICUS06:C04:G02,
   entryset = {ICUS06:C04:G02:S01},
   pattern = {ICUS06:C04:G02:[S|X]},
   patterntype = {key},
@@ -507,14 +507,14 @@
   chairperson = {Ne'eman, Yuval},
 }
 
-@inproceedings{ICUS06:C04:G02:S01,
+@InProceedings{ICUS06:C04:G02:S01,
   crossref = {ICUS06},
   title = {Overall properties of the universe},
   author = {Melvin, Mael},
   commentator = {Motz, Lloyd},
 }
 
-@inproceedings{ICUS06:C04:G02:S02,
+@InProceedings{ICUS06:C04:G02:S02,
   crossref = {ICUS06},
   title = {Man's place in the universe and the possibility of extra-terrestrial life},
   author = {Kuiper, Thomas B. H.},
@@ -523,7 +523,7 @@
 
 
 
-@set{ICUS06:C04:G03,
+@Set{ICUS06:C04:G03,
   entryset = {ICUS06:C04:G03:S01},
   pattern = {ICUS06:C04:G03:[S|X]},
   patterntype = {key},
@@ -532,21 +532,21 @@
   chairperson = {Pribram, Karl H.},
 }
 
-@inproceedings{ICUS06:C04:G03:S01,
+@InProceedings{ICUS06:C04:G03:S01,
   crossref = {ICUS06},
   title = {Some thoughts on the matter of the mind/body problem},
   author = {Robinson, Daniel H.},
   commentator = {Covian, Miguel R.},
 }
 
-@inproceedings{ICUS06:C04:G03:S02,
+@InProceedings{ICUS06:C04:G03:S02,
   crossref = {ICUS06},
   title = {A basic difficulty in the mind-brain identity-hypothesis},
   author = {Watkins, J. W. N.},
   commentator = {Maxwell, Grover},
 }
 
-@inproceedings{ICUS06:C04:G03:S03,
+@InProceedings{ICUS06:C04:G03:S03,
   crossref = {ICUS06},
   title = {Subjective and neuronal time factors in conscious sensory experience, studied in man, and their implications for the mind-brain relationship},
   author = {Libet, Benjamin},
@@ -555,7 +555,7 @@
 
 
 
-@set{ICUS06:C04:G04,
+@Set{ICUS06:C04:G04,
   entryset = {ICUS06:C04:G04:S01},
   pattern = {ICUS06:C04:G04:[S|X]},
   patterntype = {key},
@@ -564,21 +564,21 @@
   chairperson = {Jammer, Max},
 }
 
-@inproceedings{ICUS06:C04:G04:S01,
+@InProceedings{ICUS06:C04:G04:S01,
   crossref = {ICUS06},
   title = {Progress and the limits of science},
   author = {Shapere, Dudley},
   commentator = {Cernuschi, Felix},
 }
 
-@inproceedings{ICUS06:C04:G04:S02,
+@InProceedings{ICUS06:C04:G04:S02,
   crossref = {ICUS06},
   title = {The boundaries of science and technology},
   author = {Radnitzky, Gerard},
   commentator = {Karhan, Kemal and Silverman, Joseph},
 }
 
-@inproceedings{ICUS06:C04:G04:S03,
+@InProceedings{ICUS06:C04:G04:S03,
   crossref = {ICUS06},
   title = {Technology and values in a changing world},
   author = {Gotterer, Malcom H.},
@@ -587,7 +587,7 @@
 
 
 
-@set{ICUS06:C05:G01,
+@Set{ICUS06:C05:G01,
   entryset = {ICUS06:C05:G01:S01},
   pattern = {ICUS06:C05:G01:[S|X]},
   patterntype = {key},
@@ -596,7 +596,7 @@
   chairperson = {Moses, Charles},
 }
 
-@inproceedings{ICUS06:C05:G01:S01,
+@InProceedings{ICUS06:C05:G01:S01,
   crossref = {ICUS06},
   title = {The news media: freedom and responsibility},
   author = {Irvine, Reed J.},
@@ -604,7 +604,7 @@
 }
 
 
-@set{ICUS06:C05:G02,
+@Set{ICUS06:C05:G02,
   entryset = {ICUS06:C05:G02:S01},
   pattern = {ICUS06:C05:G02:[S|X]},
   patterntype = {key},
@@ -613,26 +613,26 @@
   chairperson = {Hick, John},
 }
 
-@inproceedings{ICUS06:C05:G02:S01,
+@InProceedings{ICUS06:C05:G02:S01,
   crossref = {ICUS06},
   title = {Death and the meaning of life},
   author = {Nielsen, Kai},
 }
 
-@inproceedings{ICUS06:C05:G02:S02,
+@InProceedings{ICUS06:C05:G02:S02,
   crossref = {ICUS06},
   title = {Death and the meaning of life - a Hindu response},
   author = {Gandhi, Ramchandra},
 }
 
-@inproceedings{ICUS06:C05:G02:S03,
+@InProceedings{ICUS06:C05:G02:S03,
   crossref = {ICUS06},
   title = {Death and the meaning of life in the Christian tradition},
   author = {Clarke, W. Norris},
 }
 
 
-@set{ICUS06:C05:G03,
+@Set{ICUS06:C05:G03,
   entryset = {ICUS06:C05:G03:S01},
   pattern = {ICUS06:C05:G03:[S|X]},
   patterntype = {key},
@@ -641,7 +641,7 @@
   moderator = {Lamberton, Donald McL.},
 }
 
-@inproceedings{ICUS06:C05:G03:S01,
+@InProceedings{ICUS06:C05:G03:S01,
   crossref = {ICUS06},
   title = {The Relationship of Government and Business to the Individual in Democratic and Totalitarian Systems},
   author = {Scheuch, Erwin K.},
@@ -649,7 +649,7 @@
 
 
 
-@set{ICUS06:C05:G04,
+@Set{ICUS06:C05:G04,
   entryset = {ICUS06:C05:G04:S01},
   pattern = {ICUS06:C05:G04:[S|X]},
   patterntype = {key},
@@ -658,32 +658,32 @@
   moderator = {Jones, Reginald V.},
 }
 
-@inproceedings{ICUS06:C05:G04:S01,
+@InProceedings{ICUS06:C05:G04:S01,
   crossref = {ICUS06},
   title = {Ways and Means of Multidisciplinary Studies},
   author = {Wold, Herman},
 }
 
-@inproceedings{ICUS06:C05:G04:S03,
+@InProceedings{ICUS06:C05:G04:S03,
   crossref = {ICUS06},
   title = {Interdisciplinary creativity},
   author = {Michaelis, Anthony R.},
 }
 
-@inproceedings{ICUS06:C05:G04:S03,
+@InProceedings{ICUS06:C05:G04:S03,
   crossref = {ICUS06},
   title = {Systemic research in the future},
   author = {Marc, Alexandre},
 }
 
-@inproceedings{ICUS06:C05:G04:S04,
+@InProceedings{ICUS06:C05:G04:S04,
   crossref = {ICUS06},
   title = {Towards a theory of man: a multi-disciplinary, multi-systems, multidimensional approach},
   author = {Royce, J. R.},
 }
 
 
-@set{ICUS06:C05:G05,
+@Set{ICUS06:C05:G05,
   entryset = {ICUS06:C05:G05:S01},
   pattern = {ICUS06:C05:G05:[S|X]},
   patterntype = {key},
@@ -692,7 +692,7 @@
   moderator = {Bardis, Panos D.},
 }
 
-@inproceedings{ICUS06:C05:G05:S01,
+@InProceedings{ICUS06:C05:G05:S01,
   crossref = {ICUS06},
   title = {Science as an experience of the absolute: religious and moral implications of research},
   author = {Cantore, Enrico},
@@ -700,7 +700,7 @@
 }
 
 
-@set{ICUS06:C05:G06,
+@Set{ICUS06:C05:G06,
   entryset = {ICUS06:C05:G06:S01},
   pattern = {ICUS06:C05:G06:[S|X]},
   patterntype = {key},
@@ -709,7 +709,7 @@
   moderator = {Taylor, Alastair M.},
 }
 
-@inproceedings{ICUS06:C05:G06:S01,
+@InProceedings{ICUS06:C05:G06:S01,
   crossref = {ICUS06},
   title = {The Future of Humanity in a World of Finite Resources},
   author = {King, Alexander},
@@ -717,7 +717,7 @@
 
 
 
-@set{ICUS06:C05:G07,
+@Set{ICUS06:C05:G07,
   entryset = {ICUS06:C05:G07:S01},
   pattern = {ICUS06:C05:G07:[S|X]},
   patterntype = {key},
@@ -726,7 +726,7 @@
   moderator = {Butros, Albert},
 }
 
-@inproceedings{ICUS06:C05:G07:S01,
+@InProceedings{ICUS06:C05:G07:S01,
   crossref = {ICUS06},
   title = {Scientific Research and Enquiry: Ivory Tower or the Market Place, Slaughterhouse or Shangri-La?},
   author = {Kurti, Nicholas},
@@ -734,7 +734,7 @@
 
 
 
-@set{ICUS06:C05:G08,
+@Set{ICUS06:C05:G08,
   entryset = {ICUS06:C05:G08:S01},
   pattern = {ICUS06:C05:G08:[S|X]},
   patterntype = {key},
@@ -743,26 +743,26 @@
   moderator = {Sussman, Marvin B.},
 }
 
-@inproceedings{ICUS06:C05:G08:S01,
+@InProceedings{ICUS06:C05:G08:S01,
   crossref = {ICUS06},
   title = {Future of the Family: a Cross-Cultural Perspective},
   author = {Ndeti, Kivuto},
 }
 
-@inproceedings{ICUS06:C05:G08:S02,
+@InProceedings{ICUS06:C05:G08:S02,
   crossref = {ICUS06},
   title = {Women and the family in the Muslim Middle East: past, present and future},
   author = {Keddie, Nikki R.},
 }
 
-@inproceedings{ICUS06:C05:G08:X03,
+@InProceedings{ICUS06:C05:G08:X03,
   crossref = {ICUS06},
   title = {Comments on {Future of the Family: a Cross-Cultural Perspective}},
   author = {Prothro, Edwin Terry},
 }
 
 
-@set{ICUS06:C05:G09,
+@Set{ICUS06:C05:G09,
   entryset = {ICUS06:C05:G09:S01},
   pattern = {ICUS06:C05:G09:[S|X]},
   patterntype = {key},
@@ -771,20 +771,20 @@
   moderator = {Atalay, Bulent},
 }
 
-@inproceedings{ICUS06:C05:G09:S01,
+@InProceedings{ICUS06:C05:G09:S01,
   crossref = {ICUS06},
   title = {How Can atomic energy help man's future?},
   author = {Cohen, Bernard L.},
 }
 
-@inproceedings{ICUS06:C05:G09:S02,
+@InProceedings{ICUS06:C05:G09:S02,
   crossref = {ICUS06},
   title = {The future of mankind - the nuclear imperative},
   author = {Alonso, Marcelo},
 }
 
 
-@set{ICUS06:C05:G10,
+@Set{ICUS06:C05:G10,
   entryset = {ICUS06:C05:G10:S01},
   pattern = {ICUS06:C05:G10:[S|X]},
   patterntype = {key},
@@ -793,7 +793,7 @@
   moderator = {Segre, Dan V.},
 }
 
-@inproceedings{ICUS06:C05:G10:S01,
+@InProceedings{ICUS06:C05:G10:S01,
   crossref = {ICUS06},
   title = {Alienation and identification},
   author = {Kaplan, Morton A.},
@@ -801,7 +801,7 @@
 
 
 
-@set{ICUS06:C05:G11,
+@Set{ICUS06:C05:G11,
   entryset = {ICUS06:C05:G11:S01},
   pattern = {ICUS06:C05:G11:[S|X]},
   patterntype = {key},
@@ -810,32 +810,32 @@
   moderator = {Szalai, Alexander},
 }
 
-@inproceedings{ICUS06:C05:G11:S01,
+@InProceedings{ICUS06:C05:G11:S01,
   crossref = {ICUS06},
   title = {Systematic Interrelations of Different Types of Value},
   author = {Findlay, John N.},
 }
 
-@inproceedings{ICUS06:C05:G11:S02,
+@InProceedings{ICUS06:C05:G11:S02,
   crossref = {ICUS06},
   title = {The systematic interrelation of types of values},
   author = {Mayntz, Renate V.},
 }
 
-@inproceedings{ICUS06:C05:G11:S03,
+@InProceedings{ICUS06:C05:G11:S03,
   crossref = {ICUS06},
   title = {Changes in the valuation of human life and of human life stages},
   author = {Szalai, Alexander},
 }
 
-@inproceedings{ICUS06:C05:G11:X04,
+@InProceedings{ICUS06:C05:G11:X04,
   crossref = {ICUS06},
   title = {Comments on {Systematic Interrelations of Different Types of Value}},
   author = {Chang, Ki-Kun},
 }
 
 
-@set{ICUS06:C05:G12,
+@Set{ICUS06:C05:G12,
   entryset = {ICUS06:C05:G12:S01},
   pattern = {ICUS06:C05:G12:[S|X]},
   patterntype = {key},
@@ -844,14 +844,14 @@
   moderator = {Brasted, Robert C.},
 }
 
-@inproceedings{ICUS06:C05:G12:S01,
+@InProceedings{ICUS06:C05:G12:S01,
   crossref = {ICUS06},
   title = {The Role of Education in Imparting Values},
   author = {MacVicar, Robert},
   commentator={Mazrui, Ali A.}
 }
 
-@inproceedings{ICUS06:C05:G12:X02,
+@InProceedings{ICUS06:C05:G12:X02,
   crossref = {ICUS06},
   title = {Comments on {The Role of Education in Imparting Values}},
   author = {Mehr, Farhang and Nakagawa, Hideyasu},
@@ -859,7 +859,7 @@
 
 
 
-@set{ICUS06:C05:G13,
+@Set{ICUS06:C05:G13,
   entryset = {ICUS06:C05:G13:S01},
   pattern = {ICUS06:C05:G13:[S|X]},
   patterntype = {key},
@@ -868,19 +868,19 @@
   moderator = {Goldsmith, Maurice},
 }
 
-@inproceedings{ICUS06:C05:G13:S01,
+@InProceedings{ICUS06:C05:G13:S01,
   crossref = {ICUS06},
   title = {The Social Meaning of Artistic Creativity},
   author = {Berger, René},
 }
 
-@inproceedings{ICUS06:C05:G13:S02,
+@InProceedings{ICUS06:C05:G13:S02,
   crossref = {ICUS06},
   title = {The meaning of artistic creativity},
   author = {Dufrenne, Mikel},
 }
 
-@inproceedings{ICUS06:C05:G13:S03,
+@InProceedings{ICUS06:C05:G13:S03,
   crossref = {ICUS06},
   title = {Towards a definition of poetry},
   author = {Rannit, Aleksis},
